Committed by DevDesktop

--- a/docroot/modules/custom/balance_helper/balance_helper.libraries.yml
+++ b/docroot/modules/custom/balance_helper/balance_helper.libraries.yml
@@ -4,3 +4,10 @@ JumpMenusForm:
     js/jump-menus.js: {}
   dependencies:
     - core/jquery
+    
+SearchForm:
+  version: VERSION
+  js:
+    js/search-form.js: {}
+  dependencies:
+    - core/jquery
