Tag views with ghsa

--- a/config/default/views.view.state_laws_individual_issue.yml
+++ b/config/default/views.view.state_laws_individual_issue.yml
@@ -19,7 +19,7 @@ id: state_laws_individual_issue
 label: 'State Laws by Issue'
 module: views
 description: 'List of State Laws'
-tag: ''
+tag: 'ghsa'
 base_table: node_field_data
 base_field: nid
 core: 8.x
