--- a/config/default/views.view.state_laws_individual_state.yml
+++ b/config/default/views.view.state_laws_individual_state.yml
@@ -18,7 +18,7 @@ id: state_laws_individual_state
 label: 'State Laws by State'
 module: views
 description: 'List of State Laws'
-tag: ''
+tag: 'ghsa'
 base_table: node_field_data
 base_field: nid
 core: 8.x
