--- a/config/default/views.view.events.yml
+++ b/config/default/views.view.events.yml
@@ -286,7 +286,7 @@ display:
           plugin_id: field
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
@@ -686,7 +686,7 @@ display:
           plugin_id: text
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
@@ -1436,7 +1436,7 @@ display:
           plugin_id: text
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
@@ -1836,7 +1836,7 @@ display:
       title: 'Upcoming Events'
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
