--- a/config/default/views.view.resources.yml
+++ b/config/default/views.view.resources.yml
@@ -326,7 +326,7 @@ display:
           plugin_id: field
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
@@ -477,7 +477,7 @@ display:
           plugin_id: date
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
@@ -856,7 +856,7 @@ display:
           plugin_id: date
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
