--- a/config/default/views.view.states_and_issues.yml
+++ b/config/default/views.view.states_and_issues.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - system.menu.main
     - taxonomy.vocabulary.ahs_awards
     - taxonomy.vocabulary.issue
     - taxonomy.vocabulary.law
@@ -604,6 +605,15 @@ display:
           entity_type: taxonomy_term
           entity_field: name
           plugin_id: term_name
+      menu:
+        type: normal
+        title: States
+        description: ''
+        expanded: false
+        parent: 'menu_link_content:c21c6506-1db7-4d92-991a-aad6fdf015cb'
+        weight: 0
+        context: '0'
+        menu_name: main
     cache_metadata:
       max-age: 0
       contexts:
