--- a/config/default/views.view.state_laws_individual_issue.yml
+++ b/config/default/views.view.state_laws_individual_issue.yml
@@ -495,7 +495,7 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
-      path: state-laws/by-issue/%
+      path: state-laws/issues/%
       display_description: ''
       relationships:
         term_node_tid:
