--- a/config/default/views.view.state_laws_individual_state.yml
+++ b/config/default/views.view.state_laws_individual_state.yml
@@ -494,7 +494,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: state-laws/by-state/%
+      path: state-laws/states/%
       display_description: ''
       title: ''
       defaults:
