--- a/config/default/views.view.states_and_issues.yml
+++ b/config/default/views.view.states_and_issues.yml
@@ -351,7 +351,7 @@ display:
             alter_text: false
             text: ''
             make_link: true
-            path: '/state-laws/by-issue/{{ name|lower }}'
+            path: '/state-laws/issues/{{ name|lower }}'
             absolute: false
             external: false
             replace_spaces: false
@@ -413,7 +413,7 @@ display:
         description: ''
         expanded: false
         parent: 'menu_link_content:a20d167a-e6e5-4c24-87ec-b8d4f2ece21e'
-        weight: -50
+        weight: -49
         context: '0'
         menu_name: main
       title: Issues
@@ -563,7 +563,7 @@ display:
             alter_text: false
             text: ''
             make_link: true
-            path: '/state-laws/by-state/{{ name|lower }}'
+            path: '/state-laws/states/{{ name|lower }}'
             absolute: false
             external: false
             replace_spaces: false
@@ -622,7 +622,7 @@ display:
         description: ''
         expanded: false
         parent: 'menu_link_content:a20d167a-e6e5-4c24-87ec-b8d4f2ece21e'
-        weight: -49
+        weight: -50
         context: '0'
         menu_name: main
     cache_metadata:
