--- a/config/default/workbench_moderation.moderation_state.draft.yml
+++ b/config/default/workbench_moderation.moderation_state.draft.yml
@@ -6,5 +6,5 @@ _core:
   default_config_hash: E8rvf3S2TDty4MHxR-ghhPB5UcR61WAPj1RKt6lBLaA
 id: draft
 label: Draft
-published: false
+published: true
 default_revision: false
