--- a/config/default/editor.editor.rich_text.yml
+++ b/config/default/editor.editor.rich_text.yml
@@ -24,6 +24,7 @@ settings:
             - Subscript
             - '-'
             - RemoveFormat
+            - Styles
         -
           name: Linking
           items:
@@ -38,6 +39,7 @@ settings:
           name: Media
           items:
             - Blockquote
+            - DrupalImage
             - Table
             - HorizontalRule
             - media_browser
