--- a/docroot/themes/ghsa_foundation/ghsa_foundation.info.yml
+++ b/docroot/themes/ghsa_foundation/ghsa_foundation.info.yml
@@ -1,4 +1,4 @@
-name: ghsa_foundation
+name: GHSA Foundation
 description: "Custom sub-theme, inherits from the Foundation base theme read <a href=\"http://foundation.zurb.com/docs/index.php\">framework documentation</a>"
 core: 8.x
 type: theme
@@ -10,6 +10,7 @@ base theme: zurb_foundation
 # Uncomment these lines and change "ghsa_foundation" to your theme name if you
 # need to add custom CSS or JS
 libraries:
+ - ghsa_foundation/fonts
  - ghsa_foundation/global
 
 # Regions are output in the page.html.twig
