--- a/docroot/themes/ghsa_foundation/ghsa_foundation.libraries.yml
+++ b/docroot/themes/ghsa_foundation/ghsa_foundation.libraries.yml
@@ -6,3 +6,9 @@ global:
       css/override.css: {}
   js:
     js/ghsa_foundation.js: {}
+
+fonts:
+  version: VERSION
+  css:
+    theme:
+      //fonts.googleapis.com/css?family=Nunito:300,400,700: { type: external }
