--- a/config/default/editor.editor.full_html.yml
+++ b/config/default/editor.editor.full_html.yml
@@ -42,7 +42,7 @@ settings:
     stylescombo:
       styles: ''
 image_upload:
-  status: true
+  status: false
   scheme: public
   directory: inline-images
   max_size: ''
