--- a/config/default/views.view.states_and_issues.yml
+++ b/config/default/views.view.states_and_issues.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.main
     - taxonomy.vocabulary.ahs_awards
     - taxonomy.vocabulary.issue
     - taxonomy.vocabulary.law
@@ -249,12 +248,7 @@ display:
           plugin_id: bundle
       sorts: {  }
       title: States
-      header:
-        area_text_custom:
-          id: area_text_custom
-          table: views
-          field: area_text_custom
-          plugin_id: text_custom
+      header: {  }
       footer: {  }
       empty: {  }
       relationships: {  }
@@ -413,12 +407,12 @@ display:
         fields: false
         title: false
       menu:
-        type: normal
+        type: none
         title: Issues
         description: ''
         expanded: false
-        parent: 'menu_link_content:a20d167a-e6e5-4c24-87ec-b8d4f2ece21e'
-        weight: -49
+        parent: ''
+        weight: -50
         context: '0'
         menu_name: main
       title: Issues
@@ -484,7 +478,6 @@ display:
         filters: false
         filter_groups: false
         fields: false
-        header: false
       filter_groups:
         operator: AND
         groups:
@@ -623,26 +616,14 @@ display:
           entity_field: name
           plugin_id: term_name
       menu:
-        type: normal
+        type: none
         title: States
         description: ''
         expanded: false
-        parent: 'menu_link_content:a20d167a-e6e5-4c24-87ec-b8d4f2ece21e'
-        weight: -50
+        parent: ''
+        weight: -49
         context: '0'
         menu_name: main
-      header:
-        area_text_custom:
-          id: area_text_custom
-          table: views
-          field: area_text_custom
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          tokenize: false
-          content: '<img src="http://www.ghsa.org/images/state_outlines/us_hotspots.jpg">'
-          plugin_id: text_custom
     cache_metadata:
       max-age: 0
       contexts:
@@ -792,57 +773,6 @@ display:
           entity_type: taxonomy_term
           entity_field: name
           plugin_id: term_name
-        edit_taxonomy_term:
-          id: edit_taxonomy_term
-          table: taxonomy_term_data
-          field: edit_taxonomy_term
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          text: edit
-          entity_type: taxonomy_term
-          plugin_id: entity_link_edit
         description__value:
           id: description__value
           table: taxonomy_term_field_data
