Confirm that panels works configuration

--- a/config/default/core.entity_view_display.node.page.default.yml
+++ b/config/default/core.entity_view_display.node.page.default.yml
@@ -150,5 +150,6 @@ content:
 hidden:
   field_meta_tags: true
   links: true
+  panelizer: true
   scheduled_update: true
   workbench_moderation_control: true
