New configuration: Changed the configuration so the text format that appears by default is "rich text" and that text format has a star icon enabled which allows the user to access the media library, there are more options that can be added to the text editor

--- a/config/default/block.block.ghsa_foundation_headerutility.yml
+++ b/config/default/block.block.ghsa_foundation_headerutility.yml
@@ -1,6 +1,6 @@
 uuid: d91515d9-0774-4c86-ab4d-5dcf8ebcb633
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - system.menu.header-utility
@@ -10,8 +10,8 @@ dependencies:
     - ghsa_foundation
 id: ghsa_foundation_headerutility
 theme: ghsa_foundation
-region: content
-weight: -11
+region: '-1'
+weight: -9
 provider: null
 plugin: 'menu_block:header-utility'
 settings:
