--- a/config/default/core.entity_view_display.node.page.default.yml
+++ b/config/default/core.entity_view_display.node.page.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.page.field_meta_tags
     - field.field.node.page.field_paragraphs
     - field.field.node.page.field_view
+    - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
     - node.type.page
   module:
@@ -24,41 +25,6 @@ third_party_settings:
     displays:
       default:
         blocks:
-          a38398b4-b7ea-4a65-913c-1aefccd2da43:
-            id: 'entity_field:node:uid'
-            label: 'Authored by'
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: author
-              settings: {  }
-              third_party_settings: {  }
-              weight: 0
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            region: middle
-            weight: 0
-            uuid: a38398b4-b7ea-4a65-913c-1aefccd2da43
-          e4afad5b-031d-489e-8c3d-b0e13a08a3ae:
-            id: 'entity_field:node:created'
-            label: 'Authored on'
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: timestamp
-              settings:
-                date_format: medium
-                custom_date_format: ''
-                timezone: ''
-              third_party_settings: {  }
-              weight: 0
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            region: middle
-            weight: 0
-            uuid: e4afad5b-031d-489e-8c3d-b0e13a08a3ae
           ff70830c-47b7-4b33-95ca-d743d60e5d59:
             id: 'entity_field:node:body'
             label: Body
@@ -73,7 +39,7 @@ third_party_settings:
             context_mapping:
               entity: '@panelizer.entity_context:entity'
             region: middle
-            weight: 0
+            weight: 1
             uuid: ff70830c-47b7-4b33-95ca-d743d60e5d59
           bc34f1dc-c948-4a17-9748-d1e557ac908c:
             id: 'entity_field:node:field_paragraphs'
@@ -91,7 +57,7 @@ third_party_settings:
             context_mapping:
               entity: '@panelizer.entity_context:entity'
             region: middle
-            weight: 2
+            weight: 3
             uuid: bc34f1dc-c948-4a17-9748-d1e557ac908c
           53c84768-8e78-4991-a1cc-955bc48b7a37:
             id: 'entity_field:node:field_view'
@@ -107,7 +73,7 @@ third_party_settings:
             context_mapping:
               entity: '@panelizer.entity_context:entity'
             region: middle
-            weight: 1
+            weight: 2
             uuid: 53c84768-8e78-4991-a1cc-955bc48b7a37
         id: panels_variant
         label: Default
@@ -116,8 +82,8 @@ third_party_settings:
         layout: onecol
         layout_settings: {  }
         page_title: '[node:title]'
-        storage_type: ''
-        storage_id: ''
+        storage_type: panelizer_default
+        storage_id: 'node:page:full:default'
         builder: ipe
         pattern: panelizer
 _core:
