templates and theme regions

--- a/docroot/themes/ghsa_foundation/ghsa_foundation.info.yml
+++ b/docroot/themes/ghsa_foundation/ghsa_foundation.info.yml
@@ -27,6 +27,8 @@ regions:
   header_row_1_menu_primary: Header Primary Menu
   header_row_1_menu_secondary: Header Secondary Menu
   header_row_1_search: Header Search
+  help: Help
+  home_hero: Home Hero
   content: Content
   footer_row_1_title: Footer Row 1, Title
   footer_row_1_column_1: Footer Row 1, Column 1
