--- a/config/default/block.block.ghsa_foundation_breadcrumbs.yml
+++ b/config/default/block.block.ghsa_foundation_breadcrumbs.yml
@@ -8,8 +8,8 @@ dependencies:
     - ghsa_foundation
 id: ghsa_foundation_breadcrumbs
 theme: ghsa_foundation
-region: content
-weight: -12
+region: help
+weight: -13
 provider: null
 plugin: system_breadcrumb_block
 settings:
