--- a/config/default/block.block.ghsa_foundation_help.yml
+++ b/config/default/block.block.ghsa_foundation_help.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: 8I8iACSa0sKO3k3jlvUG1ge52rfcKX7USJAQYnzuBgg
 id: ghsa_foundation_help
 theme: ghsa_foundation
-region: content
-weight: -10
+region: help
+weight: -12
 provider: null
 plugin: help_block
 settings:
