--- a/config/default/block.block.ghsa_foundation_local_tasks.yml
+++ b/config/default/block.block.ghsa_foundation_local_tasks.yml
@@ -8,8 +8,8 @@ _core:
   default_config_hash: X9I1OB0W3WlWtrK-CNcg6hNWwa8wficanpH8pYnDZDE
 id: ghsa_foundation_local_tasks
 theme: ghsa_foundation
-region: content
-weight: -6
+region: help
+weight: -9
 provider: null
 plugin: local_tasks_block
 settings:
