--- a/config/default/block.block.ghsa_foundation_messages.yml
+++ b/config/default/block.block.ghsa_foundation_messages.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: KHQIJ7Vfl25lTjzIc7qIvnuistt-Mw2O0kG4jCofmkI
 id: ghsa_foundation_messages
 theme: ghsa_foundation
-region: content
-weight: -9
+region: help
+weight: -11
 provider: null
 plugin: system_messages_block
 settings:
