--- a/config/default/block.block.ghsa_foundation_page_title.yml
+++ b/config/default/block.block.ghsa_foundation_page_title.yml
@@ -8,8 +8,8 @@ _core:
   default_config_hash: 7rR9chwXvdM2H8OYMAYx9Zj3GGlPMrZp_M3ZA4thYTk
 id: ghsa_foundation_page_title
 theme: ghsa_foundation
-region: content
-weight: -8
+region: help
+weight: -10
 provider: null
 plugin: page_title_block
 settings:
