--- a/config/default/block.block.ghsa_foundation_views_block__resources_dynamic_filtered_resources.yml
+++ b/config/default/block.block.ghsa_foundation_views_block__resources_dynamic_filtered_resources.yml
@@ -12,7 +12,7 @@ dependencies:
 id: ghsa_foundation_views_block__resources_dynamic_filtered_resources
 theme: ghsa_foundation
 region: content
-weight: -2
+weight: -10
 provider: null
 plugin: 'views_block:resources-dynamic_filtered_resources'
 settings:
@@ -25,6 +25,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: '/taxonomy/term/*'
+    pages: "/taxonomy/term/*\r\n/issues/*"
     negate: false
     context_mapping: {  }
