--- a/config/default/block.block.ghsa_foundation_views_block__slideshow_homepage_slideshow_2.yml
+++ b/config/default/block.block.ghsa_foundation_views_block__slideshow_homepage_slideshow_2.yml
@@ -11,8 +11,8 @@ dependencies:
     - ghsa_foundation
 id: ghsa_foundation_views_block__slideshow_homepage_slideshow_2
 theme: ghsa_foundation
-region: content
-weight: -7
+region: home_hero
+weight: -13
 provider: null
 plugin: 'views_block:slideshow-homepage_slideshow'
 settings:
