--- a/config/default/views.view.events.yml
+++ b/config/default/views.view.events.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.node.field_date
     - field.storage.node.field_event_image
     - image.style.eventslanding
+    - image.style.large
     - node.type.events
   module:
     - null
@@ -1072,25 +1073,14 @@ display:
         filters: false
         filter_groups: false
         header: false
+        style: false
+        row: false
       pager:
         type: some
         options:
           items_per_page: 2
           offset: 0
-      footer:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          tokenize: false
-          content:
-            value: '<a href="/events/current-upcoming-meetings" class="button">See All Upcoming Events</a>'
-            format: full_html
-          plugin_id: text
+      footer: {  }
       title: 'Upcoming Events'
       filters:
         status:
@@ -1168,9 +1158,27 @@ display:
           empty: false
           tokenize: false
           content:
-            value: '<h2>Events</h2>'
-            format: rich_text
+            value: '<img src="/themes/ghsa_foundation/images/icon-events.png" alt="icon-events" /><h2>Events</h2><a href="/events/current-upcoming-meetings" class="button">See All Upcoming Events</a>'
+            format: full_html
           plugin_id: text
+      style:
+        type: grid
+        options:
+          grouping: {  }
+          columns: 2
+          automatic_width: true
+          alignment: horizontal
+          col_class_default: true
+          col_class_custom: ''
+          row_class_default: true
+          row_class_custom: ''
+      row:
+        type: fields
+        options:
+          inline: {  }
+          separator: ''
+          hide_empty: false
+          default_field_elements: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -1570,7 +1578,7 @@ display:
           click_sort_column: target_id
           type: image
           settings:
-            image_style: eventslanding
+            image_style: large
             image_link: ''
           group_column: ''
           group_columns: {  }
@@ -1783,6 +1791,8 @@ display:
         filter_groups: false
         sorts: false
         title: false
+        style: false
+        row: false
       pager:
         type: full
         options:
@@ -1898,6 +1908,24 @@ display:
           granularity: second
           plugin_id: datetime
       title: 'Past Events'
+      style:
+        type: grid
+        options:
+          grouping: {  }
+          columns: 3
+          automatic_width: true
+          alignment: horizontal
+          col_class_default: true
+          col_class_custom: ''
+          row_class_default: true
+          row_class_custom: ''
+      row:
+        type: fields
+        options:
+          inline: {  }
+          separator: ''
+          hide_empty: false
+          default_field_elements: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -1970,7 +1998,7 @@ display:
           click_sort_column: target_id
           type: image
           settings:
-            image_style: eventslanding
+            image_style: large
             image_link: ''
           group_column: ''
           group_columns: {  }
@@ -2182,6 +2210,8 @@ display:
         title: false
         filters: false
         filter_groups: false
+        style: false
+        row: false
       pager:
         type: full
         options:
@@ -2283,6 +2313,24 @@ display:
         operator: AND
         groups:
           1: AND
+      style:
+        type: grid
+        options:
+          grouping: {  }
+          columns: 3
+          automatic_width: true
+          alignment: horizontal
+          col_class_default: true
+          col_class_custom: ''
+          row_class_default: true
+          row_class_custom: ''
+      row:
+        type: fields
+        options:
+          inline: {  }
+          separator: ''
+          hide_empty: false
+          default_field_elements: true
     cache_metadata:
       max-age: -1
       contexts:
