--- a/config/default/views.view.events.yml
+++ b/config/default/views.view.events.yml
@@ -11,7 +11,6 @@ dependencies:
     - image.style.large
     - node.type.events
   module:
-    - null
     - datetime
     - entityqueue
     - image
@@ -1794,26 +1793,10 @@ display:
         style: false
         row: false
       pager:
-        type: full
+        type: some
         options:
           items_per_page: 3
           offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: ‹‹
-            next: ››
-            first: '« First'
-            last: 'Last »'
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          quantity: 9
       footer:
         area:
           id: area
@@ -1909,16 +1892,11 @@ display:
           plugin_id: datetime
       title: 'Past Events'
       style:
-        type: grid
+        type: default
         options:
           grouping: {  }
-          columns: 3
-          automatic_width: true
-          alignment: horizontal
-          col_class_default: true
-          col_class_custom: ''
-          row_class_default: true
-          row_class_custom: ''
+          row_class: 'large-4 columns'
+          default_row_class: true
       row:
         type: fields
         options:
@@ -1931,7 +1909,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -2213,26 +2190,10 @@ display:
         style: false
         row: false
       pager:
-        type: full
+        type: some
         options:
           items_per_page: 3
           offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: ‹‹
-            next: ››
-            first: '« First'
-            last: 'Last »'
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          quantity: 9
       footer:
         area:
           id: area
@@ -2314,16 +2275,11 @@ display:
         groups:
           1: AND
       style:
-        type: grid
+        type: default
         options:
           grouping: {  }
-          columns: 3
-          automatic_width: true
-          alignment: horizontal
-          col_class_default: true
-          col_class_custom: ''
-          row_class_default: true
-          row_class_custom: ''
+          row_class: 'large-4 columns'
+          default_row_class: true
       row:
         type: fields
         options:
@@ -2336,7 +2292,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
