--- a/config/default/core.entity_form_display.node.page.default.yml
+++ b/config/default/core.entity_form_display.node.page.default.yml
@@ -6,7 +6,9 @@ dependencies:
     - field.field.node.page.body
     - field.field.node.page.field_meta_tags
     - field.field.node.page.field_paragraphs
+    - field.field.node.page.field_test
     - field.field.node.page.field_view
+    - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
     - node.type.page
   module:
@@ -52,6 +54,14 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+  field_test:
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
   field_view:
     weight: 2
     settings: {  }
